[tool.poetry]
name = "dfr_lq"
version = "0.0.0"
description = "topic modeling library quarterly"
readme = "README.md"
authors = ["Cody Hennesy <chennesy@umn.edu>", "David Naughton <naughton@umn.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.2"
jupyterlab = "*"
nltk = "^3.4.5"
pandas = "*"
scikit-learn = "^0.22.1"

[tool.poetry.dev-dependencies]
pytest = "*"
